# triangletrig

./: .gitignore  Makefile.am  configure.ac
src/lib/: Makefile.am  rectangle.c  rectangle.h
